# RGBD_CameraNetwork_Calibration

./: README.md
client_Kinect_v2/: Microsoft_grabber2.cpp  OpenCV_Kinect2SDK.cpp  data.h
client_Kinect_v2/Debug/: DepthBasics-D2D.ilk  vc120.idb
client_server_system/: INSTALLATION.md  README.md
client_server_system/client_kinect_v2/: DepthBasics-D2D.sln  DepthBasics-D2D.vcxproj  DepthCodec.cpp  DepthCodec.h  Microsoft_grabber2.cpp  Microsoft_grabber2.h  OpenCV_Kinect2SDK.cpp  OpenCV_KinectSDK.h  data.h
client_server_system/server_4_kinect_v2/: DepthBasics-D2D.vcxproj  DepthCodec.cpp  DepthCodec.h  Microsoft_grabber2.cpp  Microsoft_grabber2.h  OpenCV_Kinect2SDK.cpp  OpenCV_KinectSDK.h  Quaternion.h  RemoteKinect.cpp  RemoteKinect.h  UnityIPCManager.cpp  UnityIPCManager.h  data.h  functions.h  main.cpp  path_02.txt  path_04.txt  resource.h  rotation_2_1.txt  rotation_3_1.txt  rotation_4_1.txt  stdafx.h  translation_2_1.txt  translation_3_1.txt
extrinsic_calibration_demo/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  documentation.md
extrinsic_calibration_demo/src/: calibrationHandler.cpp  calibrationHandler.h  rgbdCameraNetwork.cpp  rotation_2_1.txt  rotation_3_1.txt  rotation_4_1.txt  sphereTracking.cpp  sphereTracking.h  threeDViewer.cpp  threeDViewer.h  translation_2_1.txt  translation_3_1.txt  translation_4_1.txt
extrinsic_calibration_demo/src/tracking/: path_01.txt  path_02.txt  path_03.txt  radius_01.txt  radius_02.txt  radius_03.txt
serverf3d 4 Kinect_v2/: UnityIPCManager.h  functions.h  path_01.txt  path_03.txt  translation_4_1.txt
(+40 files in other folders)
